--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -14,4 +14,19 @@ RUN		cd /var/www && tar -xzf wordpress-6.2-fr_FR.tar.gz && rm wordpress-6.2-fr_F
 
 COPY	./conf/php.conf /etc/conf/php.conf
 
+RUN     mkdir -p /run/php
+RUN     chmod 755 /run/php
+
+COPY	./conf/auto_config.sh /etc/conf/auto_config.sh
+
+RUN		chmod +x /etc/conf/auto_config.sh
+
 RUN		chown -R root:root /var/www/wordpress
+
+RUN		wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN		chmod +x wp-cli.phar
+RUN		mv wp-cli.phar /usr/local/bin/wp
+
+EXPOSE	9000
+
+CMD		["sh", "/etc/conf/auto_config.sh"]
