--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -11,8 +11,9 @@ RUN		apt-get install -y php7.3	\
 
 RUN		wget https://fr.wordpress.org/wordpress-6.2-fr_FR.tar.gz -P /var/www
 RUN		cd /var/www && tar -xzf wordpress-6.2-fr_FR.tar.gz && rm wordpress-6.2-fr_FR.tar.gz
+RUN		chmod 755 /var/www/wordpress
 
-COPY	./conf/php.conf /etc/conf/php.conf
+COPY	./conf/php.conf /etc/php/7.3/fpm/pool.d/www.conf
 
 RUN     mkdir -p /run/php
 RUN     chmod 755 /run/php
@@ -28,5 +29,7 @@ RUN		chmod +x wp-cli.phar
 RUN		mv wp-cli.phar /usr/local/bin/wp
 
 EXPOSE	9000
+
+WORKDIR /var/www/wordpress
 
 CMD		["sh", "/etc/conf/auto_config.sh"]
