--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,19 +2,6 @@ version: '3.8'
 
 services:
 
-  mariadb:
-    container_name: mariadb
-    networks:
-      - inception
-    build: ./requirements/mariadb
-    env_file:
-      - .env
-    volumes:
-      - mariadb:/var/lib/mysql
-    expose:
-      - "3306"
-    restart: unless-stopped
-
   nginx:
     container_name: nginx
     networks:
@@ -28,8 +15,20 @@ services:
       - "443:443"
     depends_on:
       - wordpress
-    restart: on-failure
+    restart: always
 
+  mariadb:
+    container_name: mariadb
+    networks:
+      - inception
+    build: ./requirements/mariadb
+    env_file:
+      - .env
+    volumes:
+      - mariadb:/var/lib/mysql
+    expose:
+      - "3306"
+    restart: unless-stopped
 
   wordpress:
     container_name: wordpress
