--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,27 +1,58 @@
-events {}
+events{
+}
+http{
+	server {
+		listen	443 ssl;
+			listen	[::]:443;
+		include /etc/nginx/mime.types;
 
-server {
-	listen 443 ssl;
+		#SSL/TLS Config
+		ssl_protocols			TLSv1.2 TLSv1.3;
+		ssl_certificate			/etc/nginx/ssl/inception.crt;
+		ssl_certificate_key		/etc/nginx/ssl/inception.key;
 
-	# SSL/TLS
-	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_certificate /etc/nginx/ssl/inception.crt;
-	ssl_certificate_key /etc/nginx/ssl/inception.key;
+		#root, index and server_name
+		server_name	sleon.42.fr;
+		server_tokens off;
+		root	/var/www/wordpress;
+		index	index.php index.html index.htm;
 
-	# index/serv
-	root	/var/www/wordpress;
-	index	index.php index.html index.htm;
-	server_name	msharifi.42.fr;
-	server_tokens off;
+		#redir unknown comand
+		location / {
+			try_files $uri $uri/ =404;
+		}
 
-	# verif
-	location / {
-		try_files $uri $uri/ =404;
-	}
-
-	# php
-	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
-		fastcgi_pass wordpress:9000;
+		#set php from WordPress
+		location ~ \.php$ {								# Pour toutes les requetes php
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;				# Comment renvoyer les requetes php sur le port 9000
+		}
 	}
 }
+# events {}
+
+# server {
+# 	listen 443 ssl;
+
+# 	# SSL/TLS
+# 	ssl_protocols TLSv1.2 TLSv1.3;
+# 	ssl_certificate /etc/nginx/ssl/inception.crt;
+# 	ssl_certificate_key /etc/nginx/ssl/inception.key;
+
+# 	# index/serv
+# 	root	/var/www/wordpress;
+# 	index	index.php index.html index.htm;
+# 	server_name	msharifi.42.fr;
+# 	server_tokens off;
+
+# 	# verif
+# 	location / {
+# 		try_files $uri $uri/ =404;
+# 	}
+
+# 	# php
+# 	location ~ \.php$ {
+# 		include snippets/fastcgi-php.conf;
+# 		fastcgi_pass wordpress:9000;
+# 	}
+# }
