--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -11,10 +11,11 @@ RUN			openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt\
 
 RUN			mkdir -p /var/run/nginx
 
-RUN			chmod 755 /var/www/html
-RUN			chown -R www-data:www-data /var/www/html
+COPY		./conf/nginx.conf /etc/nginx/nginx.conf
 
-COPY		./conf/nginx.conf /etc/nginx/conf
+RUN			chmod 755 /var/www/html
+RUN			mkdir -p /var/www/html && chmod 755 /var/www/html
+RUN			chown -R www-data:www-data /var/www/html
 
 EXPOSE		443
 
