--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,7 +12,7 @@ http{
 		ssl_certificate_key		/etc/nginx/ssl/inception.key;
 
 		#root, index and server_name
-		server_name	sleon.42.fr;
+		server_name	msharifi.42.fr;
 		server_tokens off;
 		root	/var/www/wordpress;
 		index	index.php index.html index.htm;
