--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,8 +6,9 @@ RUN			apt install openssl -y
 
 RUN			mkdir -p /etc/nginx/ssl
 
-RUN			openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt\
-			-keyout /etc/nginx/ssl/inception.key -subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=msharifi.42.fr/UID=msharifi"
+RUN		openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt \
+		-keyout /etc/nginx/ssl/inception.key -subj \
+		"/C=FR/ST=IDF/L=PARIS/0=42/OU=42/CN=msharifi.42.fr/UID=msharifi"
 
 RUN			mkdir -p /var/run/nginx
 
